packages/backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lingua-quiz-service
spec:
  selector:
    app: lingua-quiz
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
